--- a/chat_app_demo/assets/i18n/zh_TW.json
+++ b/chat_app_demo/assets/i18n/zh_TW.json
@@ -1,12 +1,53 @@
 {
     "login": {
         "login": "登入",
-        "username": "使用者名稱/帳號",
-        "password": "密碼"
+        "submitting": "登入中...",
+        "emailAddress": "電子郵件",
+        "emailAddressHint": "請輸入您的 Email 地址",
+        "password": "密碼",
+        "passwordHint": "6 - 20 個英數字",
+        "notRegistered": "還沒有帳號？",
+        "createAnAccount": "立即前往註冊",
+        "authError": {
+            "serverError": "伺服器有問題，請稍候再試",
+            "unexpected": "未知的錯誤",
+            "insufficientPermission": "沒有權限",
+            "invalidEmailAndPassword": "帳號或密碼錯誤",
+            "emailAddressAlreadyInUse": "帳號密碼已被使用",
+            "invalidEmail": "Email格式有誤",
+            "weakPassword": "密碼強度太弱"
+        },
+        "validator": {
+            "passwordNotEmpty": "密碼不能為空",
+            "passwordLengthNotice": "密碼長度介於 6 - 20 之間",
+            "emailNotEmpty": "電子郵件不能為空",
+            "emailFormalError": "電子郵件格式有誤"
+        }
     },
-    "setting": {
-        "theme": "主題",
-        "language": "語言",
-        "switchLangMsg": "切換語言成 繁體中文 {lang}"
+    "home": {
+        "title": "聊天APP",
+        "myFriends": "我的好友",
+        "search": "搜尋",
+        "drawer": {
+            "setting": {
+                "title": "設定",
+                "language": "語言",
+                "switchLangMsg": "切換語言成 繁體中文 {lang}"
+            },
+            "introduction": "介紹",
+            "logout": "登出"
+        },
+        "searchUserOverview": {
+            "addFriend": "加入好友",
+            "alreadyFriend": "已成為好友"
+        }
+    },
+    "userProfile": {
+        "aboutMe": "添加一些自我介紹吧",
+        "aboutMeTitle": "關於我",
+        "userName": "暱稱",
+        "userNameTitle": "暱稱",
+        "openGallery": "從相簿獲取",
+        "openCamera": "開啟相機"
     }
 }
