--- a/chat_app_demo/assets/i18n/en_US.json
+++ b/chat_app_demo/assets/i18n/en_US.json
@@ -1,10 +1,10 @@
 {
-    "login": {
+    "auth": {
         "login": "Login",
         "submitting": "Submitting...",
         "emailAddress": "Email",
         "emailAddressHint": "Enter your email address",
-        "password": "password",
+        "password": "Password",
         "passwordHint": "6 - 20 words",
         "notRegistered": "Not registered yet?",
         "createAnAccount": "Create an Account",
@@ -22,6 +22,13 @@
             "passwordLengthNotice": "Wrong password length",
             "emailNotEmpty": "Email is not empty",
             "emailFormalError": "Wrong email format"
+        },
+        "register": {
+            "title": "Register",
+            "submitting": "Registering...",
+            "dialogTitle": "Congrats!",
+            "dialogContent": "You have successfully registered.",
+            "dialogButtonText": "OK"
         }
     },
     "home": {
@@ -34,8 +41,16 @@
                 "language": "Language",
                 "switchLangMsg": "Switch language to {lang}"
             },
-            "introduction": "Introduction",
+            "introduction": {
+                "title": "App Introduction"
+            },
             "logout": "Log out"
+        },
+        "homeFailure": {
+            "serverError": "Server error",
+            "unexpected": "Unexpected error",
+            "insufficientPermission": "Insufficient permission",
+            "userNotExist": "User not exist"
         },
         "searchUserOverview": {
             "searchBoxHint": "Type the user's email.",
@@ -55,7 +70,13 @@
         "openCamera": "From camera"
     },
     "chat": {
-        "messageBoxHint": "Message"
+        "messageBoxHint": "Message",
+        "chatFailure": {
+            "serverError": "Server error",
+            "unexpected": "Unexpected error",
+            "insufficientPermission": "Insufficient permission",
+            "userNotExist": "User not exist"
+        }
     },
     "loadStatus": {
         "initial": "Load initial",
